# gradio-mcp-hack

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: agentic-app-to-space.yaml  mcp-server-to-space.yaml
src/agentic-france-chomage/: .env.example  README.md  app.py  requirements.txt
src/agentic-france-chomage/agents/: __init__.py  description_node.py  filtering_node.py  profiling_node.py  ranking_node.py  researcher_node.py
src/agentic-france-chomage/graph/: __init__.py  graph.py  state.py
src/agentic-france-chomage/utils/: __init__.py  providers.py  tool_loader.py
src/france-chomage-mcp-server/: Dockerfile  Dockerfile-HF  README.md  app.py  blaxel.toml  requirements.txt  server.py
src/france-chomage-mcp-server/tools/: __init__.py  jobsearch.py  resume_extractor.py
